# mcp23017

./: README.md  flake.nix
common/: Cargo.toml
common/src/: lib.rs
controller/: CONTRIBUTING.md  Cargo.toml
controller/src/: input.rs  lib.rs  mode.rs  output.rs  pin.rs  register.rs  runner.rs  util.rs  watch.rs
peripheral/: Cargo.toml  README.md
peripheral/src/: gpio_pin.rs  lib.rs  mcp23017.rs  reset_pin.rs  stm32.rs
