[package]
name = "controller"
version = "0.1.0"
edition = "2024"

[dependencies]
defmt = { version = "1.0.1", optional = true }
embassy-futures = "0.1.2"
embassy-sync = "0.7.2"
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
mcp23017_common = { version = "0.1.0", path = "../common" }

[patch.crates-io]
embedded-hal = { git = "https://github.com/rust-embedded/embedded-hal" }
embedded-hal-async = { git = "https://github.com/rust-embedded/embedded-hal" }

[features]
defmt = ["dep:defmt"]
