[package]
name = "mcp23017_peripheral"
version = "0.1.0"
edition = "2024"

[dependencies]
collect_array_ext_trait = "0.2.0"
defmt = { version = "1.0.1", optional = true }
embassy-futures = "0.1.2"
embassy-stm32 = { version = "0.5.0", optional = true, default-features = false, features = [
    "exti",
] }
embassy-time = "0.5.0"
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
mcp23017_common = { version = "0.1.0", path = "../common" }
strum = { version = "0.27.2", default-features = false, features = ["derive"] }

[features]
defmt = [
    "dep:defmt",
    "embassy-time/defmt",
    "embassy-futures/defmt",
    "mcp23017_common/defmt",
]
stm32 = ["dep:embassy-stm32"]
stm32f103c8 = ["stm32", "embassy-stm32/stm32f103c8"]
